--- a/TASK15/TASK13/t2.css
+++ b/TASK15/TASK13/t2.css
@@ -12,7 +12,7 @@ input{
 input:focus{
     outline: none;
 }
-.a::before{
+.a::after{
         content: "";
         background-image: linear-gradient(to left,rgb(22, 100, 0.863) 20%,rgba(22, 100, 22, 0.863) 50%,rgb(252, 114, 2) 50%,rgb(252, 114, 2)100%);
         height: 5px;
